rust/macros/tests/invalid/target/debug/deps/double_commas_rs-c0226bc8cd47ad42.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/double_commas_rs-c0226bc8cd47ad42: double-commas.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/double_commas_rs-c0226bc8cd47ad42.d: double-commas.rs

double-commas.rs:
